--- a/html/index.html
+++ b/html/index.html
@@ -18,6 +18,11 @@
 
     <title>Hello, world!</title>
     <style>
+      .paragraph {
+        margin: 10px;
+        padding: 30px; 
+        border:1px solid black;
+      }
       #moive_table {
         margin: 10%;
         align-self: center
@@ -32,25 +37,27 @@
     </style>
   </head>
   <body>
-    <div class="container-fluid" style="border:1px solid black">
+    <div class="container-fluid, paragraph">
       <h1>자기소개</h1>
-      <ul>
-        <li>이름 : 뚱이</li>
-        <li>사는곳 : 역삼동</li>
-        <li>뚱인데요?</li>
-      </ul>
+      <div class="card" style="width: 18rem; margin: 5px;">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">이름 : 뚱이</li>
+            <li class="list-group-item">사는곳 : 역삼동</li>
+            <li class="list-group-item">뚱인데요?</li>
+          </ul>
+      </div>
     </div>
-    <div class="container-fluid" style="border:1px solid black">
+    <div class="container-fluid, paragraph">
       <h1>인생 영화 BEST 5</h1>
       <table id="moive_table">
         <caption></caption>
         <thead>
           <tr>
-            <th>순위</th>
-            <th>제목</th>
-            <th>포스터</th>
-            <th>줄거리</th>
-            <th>바로가기</th>
+            <th scope="col">순위</th>
+            <th scope="col">제목</th>
+            <th scope="col">포스터</th>
+            <th scope="col">줄거리</th>
+            <th scope="col">바로가기</th>
           </tr>
         </thead>
         <tbody>
@@ -58,7 +65,7 @@
             <th>1</th>
             <td>아이언맨</td>
             <td>
-              <img
+              <img class="img-fluid"
                 src="../images/move1.jpg"
                 alt=""
               />
@@ -74,7 +81,7 @@
             <th>2</th>
             <td>악마는 프라다를 입는다.</td>
             <td>
-              <img
+              <img class="img-fluid"
                 src="../images/move2.jpg"
                 alt=""
               />
@@ -90,7 +97,7 @@
             <th>3</th>
             <td>아이언맨3</td>
             <td>
-              <img
+              <img class="img-fluid"
                 src="../images/move3.jpg"
                 alt=""
               />
@@ -108,7 +115,7 @@
             <th>4</th>
             <td>어벤져스</td>
             <td>
-              <img
+              <img class="img-fluid"
                 src="../images/move4.jpg"
                 alt=""
               />
@@ -127,7 +134,7 @@
             <th>5</th>
             <td>마음이</td>
             <td>
-              <img
+              <img class="img-fluid"
                 src="../images/move5.jpg"
                 alt=""
               />
@@ -145,7 +152,7 @@
         </tbody>
       </table>
     </div>
-    <div class="container-fluid" style="border:1px solid black">
+    <div class="container-fluid, paragraph">
     <h1>
       방명록
     </h1>
@@ -156,14 +163,17 @@
             </div>
             <input type="text" class="form-control" placeholder="뚱이" aria-label="Username" aria-describedby="basic-addon1">
         </div>
-      본인 취향 영화 <br />
-      <div>
-        <input type="radio" value="아이언맨1" />아이언맨1
-        <input type="radio" value="어벤져스" />어벤져스
-      </div>
-
-      <button type="submit" class="btn btn-outline-primary">등록</button>
-      <button type="reset" class="btn btn-outline-primary">취소</button>
+        <div>
+          <div>
+            본인 취향 영화
+          </div>
+            <div>
+              <input type="radio"  name="1" value="아이언맨1" />아이언맨1
+              <input type="radio" name="1" value="어벤져스" />어벤져스
+            </div>
+            <button type="submit" class="btn btn-outline-primary">등록</button>
+            <button type="reset" class="btn btn-outline-primary">취소</button>
+        </div>
     </div>
     </form>
     <!-- Optional JavaScript -->
